[metadata]
author = Florian Plattner
author-email = me@florianplattner.de
maintainer = Florian Plattner
maintainer-email = me@florianplattner.de
name = saga_py
summary = create a series of dependent actions and roll everything back when one of them fails
description-file = README.rst
home-page = https://github.com/flowpl/dbit
license = MIT
classifier =
     Development Status :: 5 - Production/Stable
     Environment :: Other Environment
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Topic :: Software Development :: Libraries :: Python Modules
 
keywords =
     saga
     dependent actions
     rollback
     compensate
     distributed transaction

 
[files]
packages=saga

[bdist_wheel]
universal = 1
